Updated scraping scripts to include automatic page number detection (added by Angel Hernandez)

--- a/1_scraping/scraping_script_PDF.ipynb
+++ b/1_scraping/scraping_script_PDF.ipynb
@@ -171,17 +171,33 @@
         "target_tag = ''\n",
         "target_tag_class = ''\n",
         "\n",
-        "# in case multi tags\n",
-        "# target_tags = ['']\n",
-        "# target_tag_classes = ['']\n",
+        "page_identifier = ''\n",
         "\n",
         "if type_of_page == 'page':\n",
-        "    urls = [url + '/page/' for url in urls]\n",
+        "    urls = [url + page_identifier for url in urls]\n",
         "pages_each_category = [1] #The total number of pages for each section. So if policiaca is 1..92, write 92, not 93.\n",
         "if pages_each_category:\n",
         "    total_pages = pages_each_category\n",
         "else:\n",
         "    total_pages = 500\n",
+        "#-----------------------------------------------------------------------------------------------------------------------------------------\n",
+        "\n",
+        "#Get amount of pages per category not having text code\n",
+        "#-----------------------------------------------------------------------------------------------------------------------------------------\n",
+        "retrieve_amount_of_pages_no_text = False\n",
+        "#-----------------------------------------------------------------------------------------------------------------------------------------\n",
+        "\n",
+        "\n",
+        "#Get amount of pages per category with text code\n",
+        "#-----------------------------------------------------------------------------------------------------------------------------------------\n",
+        "retrieve_amount_of_pages_w_text = False\n",
+        "xpath_for_amount_of_pages = \"\"\n",
+        "index_for_amount_of_pages_location = 0\n",
+        "#-----------------------------------------------------------------------------------------------------------------------------------------\n",
+        "\n",
+        "# in case multi tags\n",
+        "target_tags = []\n",
+        "target_tag_classes = []\n",
         "\n",
         "# New, pdf relevant parameters:\n",
         "# Used in this specific instance to index raw pdfs once their id was obtained.\n",
@@ -221,6 +237,111 @@
         "    pool.join()\n",
         "    return df"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Functions for automatically identifying the number of pages\n",
+        "\n",
+        "def check_it_has_links(url):\n",
+        "  options = FirefoxOptions()\n",
+        "  options.add_argument(\"--headless\")\n",
+        "  driver = webdriver.Firefox(options=options)\n",
+        "  driver.get(url)\n",
+        "\n",
+        "  has_links= True\n",
+        "  try:\n",
+        "    element = WebDriverWait(driver, 5).until(\n",
+        "        EC.presence_of_element_located((By.XPATH, xpath_for_link))\n",
+        "    )\n",
+        "  except TimeoutException as e:\n",
+        "    print('Could not find pages count')\n",
+        "    has_links = False\n",
+        "  driver.quit()\n",
+        "  return has_links\n",
+        "\n",
+        "def retrieve_pages_per_category_no_text(url):\n",
+        "  pages = 1\n",
+        "  pages_defined = False\n",
+        "\n",
+        "  while check_it_has_links(url + f'{pages}'):\n",
+        "    pages = pages * 10\n",
+        "\n",
+        "  add_pages = pages // 2\n",
+        "  if pages != 1:\n",
+        "    pages = pages // 2\n",
+        "    while not pages_defined:\n",
+        "      add_pages = add_pages // 2\n",
+        "      if check_it_has_links(url + f'{pages}'):\n",
+        "        pages = add_pages + pages\n",
+        "      else:\n",
+        "        pages = pages - add_pages\n",
+        "      if add_pages == 1:\n",
+        "        pages_defined = True\n",
+        "      print(pages)\n",
+        "\n",
+        "  return pages\n",
+        "\n",
+        "def retrieve_pages_per_category_w_text(url):\n",
+        "  options = FirefoxOptions()\n",
+        "  options.add_argument(\"--headless\")\n",
+        "  driver = webdriver.Firefox(options=options)\n",
+        "  driver.get(url)\n",
+        "  try:\n",
+        "    element = WebDriverWait(driver, 10).until(\n",
+        "        EC.presence_of_element_located((By.XPATH, xpath_for_amount_of_pages))\n",
+        "    )\n",
+        "  except TimeoutException as e:\n",
+        "    print('Could not find pages count')\n",
+        "    return ''\n",
+        "  pages = driver.find_element(By.XPATH, xpath_for_amount_of_pages).text\n",
+        "  if not pages:\n",
+        "    print('No text found')\n",
+        "  driver.quit()\n",
+        "  return pages"
+      ],
+      "metadata": {
+        "id": "byiwFvDpx02v"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if retrieve_amount_of_pages_no_text:\n",
+        "  total_pages = []\n",
+        "  for url in urls:\n",
+        "    amount_of_pages = retrieve_pages_per_category_no_text(url)\n",
+        "    total_pages.append(amount_of_pages)\n",
+        "  print(total_pages)\n",
+        "\n",
+        "if retrieve_amount_of_pages_w_text:\n",
+        "  total_pages = []\n",
+        "  for url in urls:\n",
+        "    text_with_amount_of_pages = retrieve_pages_per_category_w_text(url)\n",
+        "\n",
+        "    amount_of_pages =[]\n",
+        "\n",
+        "    for char in text_with_amount_of_pages[index_for_amount_of_pages_location:]:\n",
+        "      if not char.isnumeric():\n",
+        "        if char != ',' and char != '.':\n",
+        "          break\n",
+        "      else:\n",
+        "        amount_of_pages.append(char)\n",
+        "    amount_of_pages = ''.join(amount_of_pages)\n",
+        "    print(amount_of_pages + ' ' + url)\n",
+        "    if amount_of_pages:\n",
+        "      total_pages.append(int(amount_of_pages))\n",
+        "    else:\n",
+        "      total_pages.append(1)\n",
+        "  print(total_pages)"
+      ],
+      "metadata": {
+        "id": "_pjV7ws-x0qU"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
