--- a/1_scraping/scraping_script_base.ipynb
+++ b/1_scraping/scraping_script_base.ipynb
@@ -179,13 +179,28 @@
         "target_tag = ''\n",
         "target_tag_class = \"\"\n",
         "\n",
+        "page_identifier = ''\n",
+        "\n",
         "if type_of_page == 'page':\n",
-        "    urls = [url + '/page/' for url in urls]\n",
+        "    urls = [url + page_identifier for url in urls]\n",
         "pages_each_category = [1] #The total number of pages for each section. So if policiaca is 1..92, write 92, not 93.\n",
         "if pages_each_category:\n",
         "    total_pages = pages_each_category\n",
         "else:\n",
         "    total_pages = 500\n",
+        "#-----------------------------------------------------------------------------------------------------------------------------------------\n",
+        "\n",
+        "#Get amount of pages per category not having text code\n",
+        "#-----------------------------------------------------------------------------------------------------------------------------------------\n",
+        "retrieve_amount_of_pages_no_text = False\n",
+        "#-----------------------------------------------------------------------------------------------------------------------------------------\n",
+        "\n",
+        "\n",
+        "#Get amount of pages per category with text code\n",
+        "#-----------------------------------------------------------------------------------------------------------------------------------------\n",
+        "retrieve_amount_of_pages_w_text = False\n",
+        "xpath_for_amount_of_pages = \"\"\n",
+        "index_for_amount_of_pages_location = 0\n",
         "#-----------------------------------------------------------------------------------------------------------------------------------------\n",
         "\n",
         "# in case multi tags\n",
