Updated READMEs for _generic and Spanish scraping

--- a/1_scraping/SP/scraping_script_PDF.ipynb
+++ b/1_scraping/SP/scraping_script_PDF.ipynb
@@ -210,7 +210,7 @@
         "else:\n",
         "  relevant_pdf_path = f'^https?:\\/\\/{pdf_url_endpoint}.*$'\n",
         "\n",
-        "url_endpoint = False # IMPORTANT, CHANGE\n",
+        "intermediate_site = False # IMPORTANT, CHANGE\n",
         "\n",
         "title_tag = ''\n",
         "title_class = ''\n",
@@ -240,6 +240,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "byiwFvDpx02v"
+      },
+      "outputs": [],
       "source": [
         "# Functions for automatically identifying the number of pages\n",
         "\n",
@@ -299,15 +304,15 @@
         "    print('No text found')\n",
         "  driver.quit()\n",
         "  return pages"
-      ],
-      "metadata": {
-        "id": "byiwFvDpx02v"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "_pjV7ws-x0qU"
+      },
+      "outputs": [],
       "source": [
         "if retrieve_amount_of_pages_no_text:\n",
         "  total_pages = []\n",
@@ -336,12 +341,7 @@
         "    else:\n",
         "      total_pages.append(1)\n",
         "  print(total_pages)"
-      ],
-      "metadata": {
-        "id": "_pjV7ws-x0qU"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
@@ -657,7 +657,7 @@
         "\n",
         "\n",
         "def extract_pdf_text_from_df(df):\n",
-        "    if url_endpoint:\n",
+        "    if intermediate_site:\n",
         "      try:\n",
         "          content = df['pdf_id'].map(lambda x: extract_pdf_text(x, pdf_url_endpoint))\n",
         "          df['text'] = content\n",
@@ -845,7 +845,7 @@
       "outputs": [],
       "source": [
         "if 'df' not in locals() or df is None or 'link' not in df:\n",
-        "    if(os.path.exists(links_file_path+'links_'+csv_name)):\n",
+        "    if(os.path.exists(links_file_path'links_'+csv_name)):\n",
         "        df = pd.read_csv(links_file_path+'links_'+csv_name, index_col=0)"
       ]
     },
