Fixed typo in PDF scraping script for _generic and Spanish

--- a/1_scraping/SP/scraping_script_PDF.ipynb
+++ b/1_scraping/SP/scraping_script_PDF.ipynb
@@ -845,7 +845,7 @@
       "outputs": [],
       "source": [
         "if 'df' not in locals() or df is None or 'link' not in df:\n",
-        "    if(os.path.exists(links_file_path'links_'+csv_name)):\n",
+        "    if(os.path.exists(links_file_path+'links_'+csv_name)):\n",
         "        df = pd.read_csv(links_file_path+'links_'+csv_name, index_col=0)"
       ]
     },
